--- a/sections/global-navbar.liquid
+++ b/sections/global-navbar.liquid
@@ -24,12 +24,17 @@
 				width="19px"
 				height="auto">
 			<img
-				src="{{ 'icon-like.svg' | asset_url }}"
+				src="{{ 'icon-account.svg' | asset_url }}"
+				alt="search"
+				width="19px"
+				height="auto">
+			<img
+				src="{{ 'icon-whishlist.svg' | asset_url }}"
 				alt="like"
 				width="19px"
 				height="auto">
 			<img
-				src="{{ 'icon-bag.svg' | asset_url }}"
+				src="{{ 'icon-cart.svg' | asset_url }}"
 				alt="bag"
 				width="19px"
 				height="auto">
