--- a/assets/style-index.css
+++ b/assets/style-index.css
@@ -2,17 +2,42 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    letter-spacing: 0.12rem;           
+    word-spacing: 0.16rem; 
 }
 
-li {
-    font: var(--font-text-sm);
+ul, ol {
+    list-style-type: none;
 }
+
 
 a {
     text-decoration: none;
     color: inherit;
 }
 
+button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+/*Typography*/
+h1 {
+    font: var(--font-desktop-h1);
+    font-weight: 800;
+}
+
+h2 {
+    font: var(--font-desktop-h2);
+    font-weight: 700;
+}
+
+p, a, li, button {
+    font: var(--font-text-md);
+}
+
+/*Global*/
 .page-section {
     display: flex;
     justify-content: center;
@@ -21,7 +46,7 @@ a {
 
 .container {
     width: 100%;
-    max-width: 1170px;
+    max-width: 1200px;
 }
 
 .section-vertical-spacing {
@@ -47,11 +72,11 @@ a {
 }
 
 .top-info-text {
-    font: var(--font-text-xsm);
     color: var(--color-stroke);
 }
 
 /*Navbar*/
+
 .logo {
     order: 1;
     flex-grow: 1;
@@ -112,7 +137,7 @@ a {
     top: calc(100% + 1px);
     left: 0;
     height: 0;
-    transition: height var(--trasnsition-basic);
+    transition: height var(--transition-basic);
     overflow: hidden;
     z-index: 1;
 }
@@ -138,4 +163,41 @@ a {
     .js-navbar-burger-menu {
         display: flex;
     }
+}
+
+/*Home Hero*/
+
+.home-hero {
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    position: relative;
+}
+
+.cover-image {
+   object-fit: cover;
+   border-radius: var(--border-radius);
+}
+
+.home-hero-info {
+    position: absolute;
+    left: 80px;
+    bottom: 90px;
+    color: var(--color-white);
+}
+
+.home-hero-text {
+    margin: 12px 0 36px 0;
+}
+
+.home-hero-btn {
+    background-color: var(--color-white);
+    border-radius: 90px;
+    padding: 10px 32px;
+    color: var(--color-black);
+    font-weight: 500;
+}
+
+.heading-align-center {
+    text-align: center;
 }
