add home page products grid

--- a/sections/home-hero.liquid
+++ b/sections/home-hero.liquid
@@ -3,7 +3,7 @@
         <div class="home-hero-info">
             <h1>Iphone 15 series</h1>
             <p class="home-hero-text">Limited stocks available. Grab it now!</p>
-            <button class="home-hero-btn">Shop</button>
+            <button class="btn home-hero-btn-style">Shop Now</button>
         </div>
         <img class="cover-image" src="{{ 'image-hero-phone.png' | asset_url }}" alt="Hero Image" width="100%" height="100%"/>
     </div>
