--- a/assets/style-design-system.css
+++ b/assets/style-design-system.css
@@ -3,8 +3,10 @@
 :root {
     --color-black: #000000;
     --color-white: #ffffff;
+    --color-text-grey: #8E8E8E;
 
-
+    --grid-gap: 30px;
+    
     /*Transition */
     --transition-basic: 0.248s;
 
@@ -18,6 +20,7 @@
 
     /*Border */
     --border-radius: 20px;
+    --button-radious: 90px;
 
     /*Space */
     --space-4: 4px;
