--- a/assets/style-index.css
+++ b/assets/style-index.css
@@ -33,6 +33,11 @@ h2 {
     font-weight: 700;
 }
 
+h3 {
+    font: var(--font-desktop-h3);
+    font-weight: 700;
+}
+
 p, a, li, button {
     font: var(--font-text-md);
 }
@@ -49,12 +54,69 @@ p, a, li, button {
     max-width: 1200px;
 }
 
+.btn {
+    padding: 10px 32px;
+}
+
+.cover-image {
+    object-fit: cover;
+    border-radius: var(--border-radius);
+ }
+
 .section-vertical-spacing {
     margin: var(--space-120) 0;
 }
 
-/*Top Info*/
+.section-title {
+    text-align: center;
+    margin-bottom: var(--space-32);
+}
 
+.text-grey {
+    color: var(--color-text-grey)
+}
+
+.main-border-radius {
+    border-radius: var(--border-radius);
+}
+
+.flex-column-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.grid-4-column {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: var(--grid-gap);
+}
+
+.grid-2-column {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--grid-gap);
+}
+
+@media (max-width: 900px) {
+    .grid-4-column {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 520px) {
+    .grid-4-column {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .grid-2-column {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+}
+
+
+/*Top Info*/
 .top-info {
     background-color: var(--color-black);
 }
@@ -102,7 +164,7 @@ p, a, li, button {
 .navbar-link-list {
     display: flex;
     justify-content: center;
-    gap: 32px;
+    gap: var(--space-24);
     order: 2;
     flex-grow: 1;
 }
@@ -174,15 +236,10 @@ p, a, li, button {
     position: relative;
 }
 
-.cover-image {
-   object-fit: cover;
-   border-radius: var(--border-radius);
-}
-
 .home-hero-info {
     position: absolute;
     left: 80px;
-    bottom: 90px;
+    bottom: 120px;
     color: var(--color-white);
 }
 
@@ -190,14 +247,40 @@ p, a, li, button {
     margin: 12px 0 36px 0;
 }
 
-.home-hero-btn {
+.home-hero-btn-style {
     background-color: var(--color-white);
-    border-radius: 90px;
-    padding: 10px 32px;
     color: var(--color-black);
     font-weight: 500;
+    border-radius: var(--border-radius);
 }
 
-.heading-align-center {
-    text-align: center;
+
+
+/*Home Our Categories*/
+
+.our-categories-title-spacing {
+    margin: 12px 0 3px 0;
+}
+
+.product-card-image-container {
+    background-color: #F6F6F6;
+    width: 100%;
+    height: 318px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.best-selling-cta {
+    display: flex;
+    justify-content: center;
+    margin-top: var(--space-32);
+}
+
+.home-best-selling-btn-style {
+    background-color: var(--color-black);
+    color: var(--color-white);
+    font-weight: 500;
+    border-radius: var(--border-radius);
 }
