--- a/assets/style-design-system.css
+++ b/assets/style-design-system.css
@@ -6,6 +6,7 @@
     --color-text-grey: #8E8E8E;
 
     --grid-gap: 30px;
+    --shadow: 0px 0px 26px 0px rgba(0, 0, 0, 0.06);
     
     /*Transition */
     --transition-basic: 0.248s;
