--- a/sections/home-hero.liquid
+++ b/sections/home-hero.liquid
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="home-hero">
-        <div class="home-hero-info">
+        <div class="home-overlay-info">
             <h1>Iphone 15 series</h1>
             <p class="home-hero-text">Limited stocks available. Grab it now!</p>
             <button class="btn home-hero-btn-style">Shop Now</button>
