--- a/sections/home-offers.liquid
+++ b/sections/home-offers.liquid
@@ -1,7 +1,21 @@
 <div class="container">
     <div class="grid-2-column">
-        <div></div>
-        <div></div>
+        <div class="home-offer-container">
+            <div class="home-offer-overlay-info">
+                <h2>20% Off on Laptops</h2>
+                <p class="home-hero-text">Products on sale for limited time only.</p>
+                <button class="btn home-hero-btn-style">Shop It Now</button>
+            </div>
+            <img class="cover-image" src="{{ 'image-collection-home-1.png' | asset_url }}" alt="Hero Image" width="100%" height="100%"/>
+        </div>
+        <div class="home-offer-container">
+            <div class="home-offer-overlay-info">
+                <h2>Apple collections</h2>
+                <p class="home-hero-text">Get your best apple products.</p>
+                <button class="btn home-hero-btn-style">Shop It Now</button>
+            </div>
+            <img class="cover-image" src="{{ 'image-collection-home-2.png' | asset_url }}" alt="Hero Image" width="100%" height="100%"/>
+        </div>
     </div>
 </div>
 
