--- a/sections/global-latest-posts.liquid
+++ b/sections/global-latest-posts.liquid
@@ -16,7 +16,9 @@
             <p>feb 22, 2024  -  Gadgets</p>
             <h5>How to use gimbal to take video</h5>
         </div>
-
+    </div>
+    <div class="best-selling-cta">
+        <a href="" class="btn home-best-selling-btn-style" >Read Blogs</a>
     </div>
 </div>
 
