--- a/sections/global-footer.liquid
+++ b/sections/global-footer.liquid
@@ -1,2 +1,41 @@
 <footer class="footer">
+    <div class="container page-section">
+        <div class="grid-4-column-footer">
+            <div>
+                <h3>BasicStore.</h3>
+                <p class="footer-description">Nisi, purus vitae, ultrices nunc. Sit ac sit suscipit hendrerit. Gravida massa volutpat aenean odio erat nullam fringilla.</p>
+                {% render 'social-media-icons' %}
+            </div>
+            <div>
+                <h3>Quick links</h3>
+                <ul class="footer-list">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Catalog</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">About</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Help & info</h3>
+                <ul class="footer-list">
+                    <li><a href="">Track Your Order</a></li>
+                    <li><a href="">Return Policies</a></li>
+                    <li><a href="">Shipping + Delivery</a></li>
+                    <li><a href="">FAQs</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3>Contact us</h3>
+                <ul class="footer-list">
+                    <li>yourinfo@gmail.com</li>
+                    <li>+55 111 222 333 44</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="container page-section">
+            <p class="footer-bottom-description">© Copyright 2024 BasicStore. Design by TemplatesJungle. Developed By Ioannis</p>
+        </div>
+    </div>
 </footer>
