--- a/sections/home-offers.liquid
+++ b/sections/home-offers.liquid
@@ -6,7 +6,7 @@
                 <p class="home-hero-text">Products on sale for limited time only.</p>
                 <button class="btn home-hero-btn-style">Shop It Now</button>
             </div>
-            <img class="cover-image" src="{{ 'image-collection-home-1.png' | asset_url }}" alt="Hero Image" width="100%" height="100%"/>
+            <img class="cover-image" src="{{ 'image-collection-home-1.png' | asset_url }}" alt="" width="100%" height="100%"/>
         </div>
         <div class="home-offer-container">
             <div class="home-offer-overlay-info">
@@ -14,7 +14,7 @@
                 <p class="home-hero-text">Get your best apple products.</p>
                 <button class="btn home-hero-btn-style">Shop It Now</button>
             </div>
-            <img class="cover-image" src="{{ 'image-collection-home-2.png' | asset_url }}" alt="Hero Image" width="100%" height="100%"/>
+            <img class="cover-image" src="{{ 'image-collection-home-2.png' | asset_url }}" alt="" width="100%" height="100%"/>
         </div>
     </div>
 </div>
