--- a/assets/style-design-system.css
+++ b/assets/style-design-system.css
@@ -4,7 +4,9 @@
     --color-black: #000000;
     --color-white: #ffffff;
     --color-text-grey: #8E8E8E;
-
+    
+    --color-stroke: #E6E6E6;
+    
     --grid-gap: 30px;
     --shadow: 0px 0px 26px 0px rgba(0, 0, 0, 0.06);
     
@@ -18,6 +20,7 @@
     --font-desktop-h2: 2rem/3rem var(--font-family);
     --font-desktop-h3: 1.125rem/1.7rem var(--font-family);
     --font-text-md: 1rem/1.5rem var(--font-family);
+    --font-text-sm: 0.75rem/1.125rem var(--font-family);
 
     /*Border */
     --border-radius: 20px;
