--- a/assets/style-index.css
+++ b/assets/style-index.css
@@ -76,7 +76,10 @@ p, a, li, button {
 }
 
 .cover-image {
+    width: 100%;
+    height: 100%;  
     object-fit: cover;
+    object-position: 50% 50%;
     border-radius: var(--border-radius);
  }
 
@@ -404,4 +407,147 @@ p, a, li, button {
 
 .company-info-icon * {
     stroke: #F4890A !important;
+}
+
+.subscribe-cta-container {
+    position: relative;
+    height: 100%;
+    min-height: 340px;
+    overflow: hidden;
+}
+
+.subscribe-cta-content {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-white);
+    text-align: center;
+    padding: 20px;
+}
+
+.subscribe-cta-special-input {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 36px;
+}
+
+.contact-form {
+    width: 80%;
+}
+
+.subscribe-cta-input {
+    padding: 0.75rem 1rem;
+    border: 1px solid #ccc;
+    border-right: none;
+    border-radius: 10px 0 0 10px;
+    font-size: 1rem;
+    width: 100%;
+    max-width: 360px;
+  }
+  
+  .subscribe-cta-input::placeholder {
+    color: #bbb;
+  }
+  
+  .subscribe-cta-btn {
+    padding: 0.75rem 1.5rem;
+    border: none;
+    background-color: #ff7c00; 
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 0 10px 10px 0;
+    transition: background-color 0.3s;
+  }
+  
+  .subscribe-cta-btn:hover {
+    background-color: #e66900; 
+  }
+  
+  .label-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+
+  @media (max-width: 632px) {
+    .subscribe-cta-special-input {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .subscribe-cta-btn, .subscribe-cta-input {
+        border-radius: 10px;
+    }
+
+    .subscribe-cta-btn {
+        width: 100%;
+        max-width: 360px;
+    }
+
+    .subscribe-cta-container {
+        min-height: 440px;
+    }
+}
+
+/*footer */
+
+.footer {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-description {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 80%;
+}
+
+.footer-list {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.social-media-icons-container {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.social-media-icons-container * {
+    stroke: #F4890A !important;
+}
+
+.grid-4-column-footer {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    gap: var(--grid-gap);
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border-top: 1px solid var(--color-stroke);
+    margin-top: 60px;
+    padding: 20px 0;
+}
+
+.footer-bottom-description {
+    font: var(--font-text-sm) !important;
 }
