--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {{ "style-design-system.css" | asset_url | stylesheet_tag }}
     {{ "style-index.css" | asset_url | stylesheet_tag }}
+    {{ "style-collection.css" | asset_url | stylesheet_tag }}
 
 
     <script src="{{ 'script-responsive-navbar.js' | asset_url }}" defer></script>
