--- a/assets/style-index.css
+++ b/assets/style-index.css
@@ -569,3 +569,26 @@ p, a, li, button {
 .footer-bottom-description {
     font: var(--font-text-sm) !important;
 }
+
+/*Page Header*/
+
+.page-header {
+    position: relative;
+    height: 280px;
+}
+
+.cover-image.no-radius {
+    border-radius: 0;
+}
+
+.page-header-content {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-white);
+}
