--- a/snippets/filter.liquid
+++ b/snippets/filter.liquid
@@ -3,41 +3,43 @@
 
 		{% # BOOLEAN %}
 		{% if filter.type == "boolean" %}
-			<ul>
-				<li>
-					<label for="Filter-{{ filter.param_name }}-true">
-						<input
-							type="radio"
-							name="{{ filter.param_name }}"
-							value="{{ filter.true_value.value }}"
-							id="Filter-{{ filter.param_name }}-true"
-							{% if filter.true_value.active %}checked{% endif %}
-							{% if filter.true_value.count == 0 and filter.true_value.active == false %}disabled{% endif %}>
-							{{ filter.true_value.label }}
-					</label>
-				</li>
-				<li>
-					<label for="Filter-{{ filter.param_name }}-false">
-						<input
-							type="radio"
-							name="{{ filter.param_name }}"
-							value="{{ filter.false_value.value }}"
-							id="Filter-{{ filter.param_name }}-false"
-							{% if filter.false_value.active %}checked{% endif %}
-							{% if filter.false_value.count == 0 and filter.false_value.active == false %}disabled{% endif %}>
-							{{ filter.false_value.label }}
-					</label>
-				</li>
-			</ul>
-			<div>
-				<input type="submit" value="Apply">
+			<div class="boolean-filter-container">	
+				<ul>
+					<li>
+						<label for="Filter-{{ filter.param_name }}-true">
+							<input
+								type="radio"
+								name="{{ filter.param_name }}"
+								value="{{ filter.true_value.value }}"
+								id="Filter-{{ filter.param_name }}-true"
+								{% if filter.true_value.active %}checked{% endif %}
+								{% if filter.true_value.count == 0 and filter.true_value.active == false %}disabled{% endif %}>
+								{{ filter.true_value.label }}
+						</label>
+					</li>
+					<li>
+						<label for="Filter-{{ filter.param_name }}-false">
+							<input
+								type="radio"
+								name="{{ filter.param_name }}"
+								value="{{ filter.false_value.value }}"
+								id="Filter-{{ filter.param_name }}-false"
+								{% if filter.false_value.active %}checked{% endif %}
+								{% if filter.false_value.count == 0 and filter.false_value.active == false %}disabled{% endif %}>
+								{{ filter.false_value.label }}
+						</label>
+					</li>
+				</ul>
+				<div>
+					<input type="submit" value="Apply">
+				</div>
 			</div>
 		{% endif %}
 
 
 		{% # LIST %}
 		{% if filter.type == "list" %}
-			<div>
+			<div class="list-filter-container">
 				<h5>{{ filter.label }}</h5>
 				<ul>
 					{% for filter_value in filter.values %}
@@ -64,7 +66,7 @@
 
 		{% # PRICE RANGE %}
 		{% if filter.type == "price_range" %}
-			<div>
+			<div class="price-range-filter-container">
 				<h5>{{ filter.label }}</h5>
 				<div class="">
 					<span>{{ cart.currency.symbol }}</span>
