--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,6 +10,7 @@
 
 
     <script src="{{ 'script-responsive-navbar.js' | asset_url }}" defer></script>
+    <script src="{{ 'script-filter-dropdown.js' | asset_url }}" defer></script>
 
     <title>{{ page_title }}</title>
     {{content_for_header}}
